--- a/app/index.html
+++ b/app/index.html
@@ -145,7 +145,8 @@
         <div class="row__medium-4">
           <div class="testimonial">
             <div class="testimonial__img">
-              <img src="assets/images/testimonial-jane.jpg">
+              <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w,
+                assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="jane doe">
             </div>
             <h3 class="testimonial__title">Jane Doe</h3>
             <h4 class="testimonial__subtitle">9 Time Escaper</h4>
@@ -157,7 +158,8 @@
         <div class="row__medium-4">
           <div class="testimonial">
             <div class="testimonial__img">
-              <img src="assets/images/testimonial-john.jpg">
+              <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w,
+                assets/images/testimonial-john-hi-dpi.jpg 320w" alt="john smith">
             </div>
             <h3 class="testimonial__title">John Smith</h3>
             <h4 class="testimonial__subtitle">4 Time Escaper</h4>
@@ -168,7 +170,8 @@
         <div class="row__medium-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__img">
-              <img src="assets/images/testimonial-cat.jpg">
+              <img sizes="160w" src="assets/images/testimonial-cat.jpg 160w,
+                assets/images/testimonial-cat-hi-dpi.jpg 320w">
             </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
             <h4 class="testimonial__subtitle">6 Time Escaper</h4>
