--- a/app/index.html
+++ b/app/index.html
@@ -170,8 +170,8 @@
         <div class="row__medium-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__img">
-              <img sizes="160w" src="assets/images/testimonial-cat.jpg 160w,
-                assets/images/testimonial-cat-hi-dpi.jpg 320w">
+              <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w,
+                assets/images/testimonial-john-hi-dpi.jpg 320w" alt="john smith">
             </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
             <h4 class="testimonial__subtitle">6 Time Escaper</h4>
@@ -184,8 +184,15 @@
     
   </div>
 
-  <footer>
-    <p>Copyright &copy; 2019 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
+  <footer class="site-footer">
+    <div class="wrapper">
+      <p>
+        <span class="site-footer__text">
+          Copyright &copy; 2019 Clear View Escapes. All rights reserved. 
+        </span>
+        <a href="#" class="btn btn--orange">Get in Touch</a>
+      </p>
+    </div>
   </footer>
   <!-- Leave this commented out HTML here until you need it for an upcoming "modal" lesson
   <div class="modal">
