--- a/app/index.html
+++ b/app/index.html
@@ -14,16 +14,22 @@
       <div class="site-header__logo">
         <img src="assets/images/icons/clear-view-escapes.svg">
       </div>
-      <div class="site-header__btn">
-        <a href="#" class="btn">Get in Touch</a>
+
+      <div class="site-header__menu-icon"></div>
+
+      <div class="site-header__menu-content">
+        <div class="site-header__btn">
+          <a href="#" class="btn">Get in Touch</a>
+        </div>
+        <nav class="main-nav main-nav--move-right">
+          <ul>
+            <li><a href="#our-beginning">Our Beginning</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav class="main-nav main-nav--move-right">
-        <ul>
-          <li><a href="#our-beginning">Our Beginning</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-        </ul>
-      </nav>
+      
     </div>
     
   </header>
