--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
       <h3 class="headline headline--center headline--mb-lrg headline--narrow headline--light headline--orange headline--small">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
       <div class="wrapper wrapper--medium wrapper--mb">
         <!-- if changing resolution but no crop use this -->
-        <img sizes="(min-width: 970px) 976px, 100vw" srcset="assets/images/first-trip-low-res.jpg 565w,
+        <img class="lazy load"sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w,
           assets/images/first-trip.jpg 976w,
           assets/images/first-trip-hi-dpi.jpg 1952w" alt="Couple walking down a street.">
       </div>
@@ -73,11 +73,11 @@
       <div class="row row--gutters">
         <div class="row__medium-4 row__medium-4--lrg row__mb">
           <picture>
-            <source sizes="404px" srcset="assets/images/our-start.jpg 404w,
+            <source sizes="404px" data-srcset="assets/images/our-start.jpg 404w,
               assets/images/our-start-hi-dpi.jpg 808w" media="(min-width:1020px)">
-            <source sizes="320px" srcset="assets/images/our-start-portrait.jpg 382w,
+            <source sizes="320px" data-srcset="assets/images/our-start-portrait.jpg 382w,
               assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width:800px)">
-            <img srcset="assets/images/our-start-landscape.jpg 800w,
+            <img class="lazy load" data-srcset="assets/images/our-start-landscape.jpg 800w,
               assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="our founder">
           </picture>
         </div>
@@ -160,7 +160,7 @@
         <div class="row__medium-4">
           <div class="testimonial">
             <div class="testimonial__img">
-              <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w,
+              <img class="lazy load" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w,
                 assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="jane doe">
             </div>
             <h3 class="testimonial__title">Jane Doe</h3>
@@ -173,7 +173,7 @@
         <div class="row__medium-4">
           <div class="testimonial">
             <div class="testimonial__img">
-              <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w,
+              <img class="lazy load" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w,
                 assets/images/testimonial-john-hi-dpi.jpg 320w" alt="john smith">
             </div>
             <h3 class="testimonial__title">John Smith</h3>
@@ -185,7 +185,7 @@
         <div class="row__medium-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__img">
-              <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w,
+              <img class="lazy load" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w,
                 assets/images/testimonial-john-hi-dpi.jpg 320w" alt="john smith">
             </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
