--- a/app/index.html
+++ b/app/index.html
@@ -65,20 +65,16 @@
       <h3 class="headline headline--center headline--mb-lrg headline--narrow headline--light headline--orange headline--small">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
       <div class="wrapper wrapper--medium wrapper--mb">
         <!-- if changing resolution but no crop use this -->
-        <img class="lazy load"sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w,
-          assets/images/first-trip.jpg 976w,
-          assets/images/first-trip-hi-dpi.jpg 1952w" alt="Couple walking down a street.">
+        <img class="lazyload" sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w" alt="Couple walking down a street.">
+        
       </div>
       
       <div class="row row--gutters">
         <div class="row__medium-4 row__medium-4--lrg row__mb">
           <picture>
-            <source sizes="404px" data-srcset="assets/images/our-start.jpg 404w,
-              assets/images/our-start-hi-dpi.jpg 808w" media="(min-width:1020px)">
-            <source sizes="320px" data-srcset="assets/images/our-start-portrait.jpg 382w,
-              assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width:800px)">
-            <img class="lazy load" data-srcset="assets/images/our-start-landscape.jpg 800w,
-              assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="our founder">
+            <source sizes="404px" data-srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi.jpg 808w" media="(min-width: 1020px)">
+            <source sizes="320px" data-srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width: 800px)">
+            <img class="lazyload" data-srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="Our founder, Jane Doe">
           </picture>
         </div>
 
@@ -160,9 +156,8 @@
         <div class="row__medium-4">
           <div class="testimonial">
             <div class="testimonial__img">
-              <img class="lazy load" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w,
-                assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="jane doe">
-            </div>
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+              </div>
             <h3 class="testimonial__title">Jane Doe</h3>
             <h4 class="testimonial__subtitle">9 Time Escaper</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>  
@@ -173,9 +168,8 @@
         <div class="row__medium-4">
           <div class="testimonial">
             <div class="testimonial__img">
-              <img class="lazy load" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w,
-                assets/images/testimonial-john-hi-dpi.jpg 320w" alt="john smith">
-            </div>
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+              </div>
             <h3 class="testimonial__title">John Smith</h3>
             <h4 class="testimonial__subtitle">4 Time Escaper</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>    
@@ -185,9 +179,8 @@
         <div class="row__medium-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__img">
-              <img class="lazy load" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w,
-                assets/images/testimonial-john-hi-dpi.jpg 320w" alt="john smith">
-            </div>
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+              </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
             <h4 class="testimonial__subtitle">6 Time Escaper</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>       
