another change in the images

--- a/app/index.html
+++ b/app/index.html
@@ -65,8 +65,7 @@
       <h3 class="headline headline--center headline--mb-lrg headline--narrow headline--light headline--orange headline--small">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
       <div class="wrapper wrapper--medium wrapper--mb">
         <!-- if changing resolution but no crop use this -->
-        <img class="lazyload" sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w" alt="Couple walking down a street.">
-        
+        <img class=" lazyloaded" sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w" alt="Couple walking down a street." srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w">
       </div>
       
       <div class="row row--gutters">
